--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,17 +6,38 @@ jobs:
   build:
     name: Build API Docs
     runs-on: ubuntu-latest
+    env:
+      IIDFILE: docs/docker/ImageID
 
     steps:
     - uses: actions/checkout@v1
 
     - name: Docs generator image
-      run: docker build --iidfile=docs/docker/ImageID --rm docs/docker
+      run: docker build --iidfile="${IIDFILE}" --rm docs/docker
 
     - name: Make API docs
-      run: docker run --rm -v $(pwd):/repo $(cat docs/docker/ImageID)
+      run: docker run --rm -v $(pwd):/repo "$(cat ${IIDFILE})"
 
     - uses: actions/upload-artifact@master
       with:
         name: html-docs
         path: docs/_build
+
+  publish:
+    name: Publish API Docs
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - uses: actions/download-artifact@master
+      with:
+        name: html-docs
+    - name: Force push gh-pages
+      run: |
+        find -ls
+        git init .
+        git remote add origin "https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}"
+        git checkout -B gh-pages
+        git add .
+        git commit -m "Generated from GitHub Action ${GITHUB_ACTION}"
+        git push --force origin gh-pages
