Removed old travis-ci, upped version, using github user URL

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -37,7 +37,7 @@ jobs:
       run: |
         find -ls
         git init .
-        git config user.name "${GITHUB_ACTOR}"
+        git config user.name "https://www.github.com/${GITHUB_ACTOR}"
         git config user.email "${GITHUB_ACTOR}@${GITHUB_SHA}"
         git remote add origin "https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}"
         git checkout -B gh-pages
